test/typecheck/bad-global-getglobal-type-mismatch.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (import "foo" "bar" (global i32))
  (global f32 (get_global 0)))
(;; STDERR ;;;
out/test/typecheck/bad-global-getglobal-type-mismatch.txt:5:16: error: type mismatch in constant expression, expected [f32] but got [i32]
  (global f32 (get_global 0)))
               ^^^^^^^^^^
;;; STDERR ;;)
